crates/stef-compiler/tests/snapshots/compiler__error@enum_gen_dup.stef.snap
---
source: crates/stef-compiler/tests/compiler.rs
expression: "stef_compiler :: validate_schema(& schema).unwrap_err()"
input_file: crates/stef-compiler/tests/inputs/invalid/enum_gen_dup.stef
---
  × invalid generic type found
  ├─▶ duplicate generic type name found
  ╰─▶ duplicate generic type name `T`
   ╭─[enum_gen_dup.stef:1:1]
 1 │ enum Sample<T, T> {
   ·             ┬  ┬
   ·             │  ╰── used here again
   ·             ╰── first declared here
 2 │     One @1,
 3 │     Two { value: T @1 } @2,
 4 │ }
   ╰────
  help: the names of each generic type must be unique

