crates/stef-compiler/tests/snapshots/compiler__error@enum_gen_unused.stef.snap
---
source: crates/stef-compiler/tests/compiler.rs
expression: "stef_compiler :: validate_schema(& schema).unwrap_err()"
input_file: crates/stef-compiler/tests/inputs/invalid/enum_gen_unused.stef
---
  × invalid generic type found
  ├─▶ unused generic type argument found
  ╰─▶ unused generic type argument `T`
   ╭─[enum_gen_unused.stef:1:1]
 1 │ enum Sample<T> {
   ·             ┬
   ·             ╰── declared here
 2 │     One @1,
 3 │     Two { value: string @1 } @2,
 4 │ }
   ╰────
  help: each declared generic must be used in some way

