crates/stef-compiler/tests/snapshots/compiler__error@enum_named_dup_id.stef.snap
---
source: crates/stef-compiler/tests/compiler.rs
description: "enum Sample {\n    One @1,\n    Two {\n        field1: string @1,\n        field2: string @1,\n    } @2,\n}"
input_file: crates/stef-compiler/tests/inputs/invalid/enum_named_dup_id.stef
---
  × duplicate ID found
  ├─▶ duplicate ID in a field
  ╰─▶ duplicate ID 1 in field `field2`, already used in `field1`
   ╭─[enum_named_dup_id.stef:1:1]
 1 │ enum Sample {
 2 │     One @1,
 3 │     Two {
 4 │         field1: string @1,
   ·                        ─┬
   ·                         ╰── first declared here
 5 │         field2: string @1,
   ·                        ─┬
   ·                         ╰── used here again
 6 │     } @2,
 7 │ }
   ╰────
  help: the IDs for each field must be unique

