crates/stef-compiler/tests/snapshots/compiler__error@enum_unnamed_dup_id.stef.snap
---
source: crates/stef-compiler/tests/compiler.rs
description: "enum Sample {\n    One @1,\n    Two(string @1, string @1) @2,\n}"
input_file: crates/stef-compiler/tests/inputs/invalid/enum_unnamed_dup_id.stef
---
  × duplicate ID found
  ├─▶ duplicate ID in a field
  ╰─▶ duplicate ID 1 in position 2, already used at 1
   ╭─[enum_unnamed_dup_id.stef:1:1]
 1 │ enum Sample {
 2 │     One @1,
 3 │     Two(string @1, string @1) @2,
   ·                ─┬         ─┬
   ·                 │          ╰── used here again
   ·                 ╰── first declared here
 4 │ }
   ╰────
  help: the IDs for each field must be unique

