crates/stef-compiler/tests/snapshots/compiler__error@enum_variant_dup_id.stef.snap
---
source: crates/stef-compiler/tests/compiler.rs
expression: "stef_compiler :: validate_schema(& schema).unwrap_err()"
input_file: crates/stef-compiler/tests/inputs/invalid/enum_variant_dup_id.stef
---
  × duplicate ID found
  ├─▶ duplicate ID in an enum variant
  ╰─▶ duplicate ID 1 in enum variant `Two`, already used in `One`
   ╭─[enum_variant_dup_id.stef:1:1]
 1 │ enum Sample {
 2 │     One @1,
   ·         ─┬
   ·          ╰── first declared here
 3 │     Two @1,
   ·         ─┬
   ·          ╰── used here again
 4 │ }
   ╰────
  help: the IDs for each variant of an enum must be unique

