crates/stef-compiler/tests/snapshots/compiler__error@resolve_kind_mismatch.stef.snap
---
source: crates/stef-compiler/tests/compiler.rs
expression: "stef_compiler :: validate_schema(& schema).unwrap_err()"
input_file: crates/stef-compiler/tests/inputs/invalid/resolve_kind_mismatch.stef
---
  × type resolution failed
  ├─▶ failed resolving type in local modules
  ╰─▶ definition found, but a const can't be referenced
   ╭─[resolve_kind_mismatch.stef:1:1]
 1 │ struct Sample {
 2 │     value: OTHER @1,
   ·            ──┬──
   ·              ╰── used here
 3 │ }
 4 │ 
 5 │ const OTHER: u32 = 1;
   ·       ──┬──
   ·         ╰── declared here
   ╰────
  help: only struct and enum definitions can be used

