crates/stef-compiler/tests/snapshots/compiler__error@resolve_sub.stef.snap
---
source: crates/stef-compiler/tests/compiler.rs
expression: "stef_compiler :: validate_schema(& schema).unwrap_err()"
input_file: crates/stef-compiler/tests/inputs/invalid/resolve_sub.stef
---
  × type resolution failed
  ├─▶ failed resolving type in local modules
  ╰─▶ definition Other not found in module ::resolve_sub::inner
   ╭─[resolve_sub.stef:1:1]
 1 │ struct Sample {
 2 │     value: inner::Other @1,
   ·                   ──┬──
   ·                     ╰── used here
 3 │ }
 4 │ 
 5 │ mod inner {}
   ╰────

